--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,117 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@font-face {
+    font-family: 'Roboto Condensed';
+    src: url('../../public/fonts/roboto-condensed/RobotoCondensed-Regular.woff2') format('woff2'),
+        url('../../public/fonts/roboto-condensed/RobotoCondensed-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+@font-face {
+    font-family: 'Roboto Condensed';
+    src: url('../../public/fonts/roboto-condensed/RobotoCondensed-Bold.woff2') format('woff2'),
+        url('../../public/fonts/roboto-condensed/RobotoCondensed-Bold.woff') format('woff');
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+@font-face {
+    font-family: 'Tiamat Condensed SC';
+    src: url('../../public/fonts/tiamat-condensed-sc/TiamatCondensedSC-Regular.woff2') format('woff2'),
+        url('../../public/fonts/tiamat-condensed-sc/TiamatCondensedSC-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@theme {
+    --animate-bounce: bounce 1s ease-in-out;
+    --animate-flip: flip 700ms ease-in-out;
+    --animate-rotate: rotate 500ms linear;
+    --animate-shake: shake 1s ease-in-out;
+    --breakpoint-xs: 30rem;
+    --color-activered: #cd1010;
+    --color-red: #eb1313;
+    --font-tiamat: "Tiamat Condensed SC", serif;
+    --font-roboto: "Roboto Condensed", sans-serif;
+
+    @keyframes bounce {
+        20% {
+            transform: translateY(-8px);
+        }
+        40% {
+            transform: translateY(2px);
+        }
+        60% {
+            transform: translateY(-4px);
+        }
+        80% {
+            transform: translateY(1px);
+        }
+        90% {
+            transform: translateY(-2px);
+        }
+        100% {
+            transform: translateY(0);
+        }
+    }
+
+    @keyframes flip {
+        25% {
+            transform: rotateY(45deg);
+        }
+        50% {
+            transform: rotateY(90deg);
+        }
+        75% {
+            transform: rotateY(45deg);
+        }
+        100% {
+            transform: rotateY(0deg);
+        }
+    }
+
+    @keyframes rotate {
+        100% {
+            transform: rotate(-360deg);
+        }
+    }
+
+    @keyframes shake {
+        20% {
+            transform: translateX(-8px);
+        }
+        40% {
+            transform: translateX(6px);
+        }
+        60% {
+            transform: translateX(-4px);
+        }
+        80% {
+            transform: translateX(2px);
+        }
+        90% {
+            transform: translateX(-1px);
+        }
+        100% {
+            transform: translateX(0);
+        }
+    }
+}
+
+html {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  background: black;
+  color: white;
 }
